Adding compiler plugin - Vartika

--- a/Reap/pom.xml
+++ b/Reap/pom.xml
@@ -158,9 +158,21 @@
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
 				</plugin>
+				
+				<plugin> 
+					<groupId>org.apache.maven.plugins</groupId> 
+					<artifactId>maven-compiler-plugin</artifactId> 
+					<version>3.2</version> 
+					<configuration> <verbose>true</verbose> 
+					<source>1.7</source>
+					<target>1.7</target>
+					<showWarnings>true</showWarnings>
+					</configuration> 
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<finalName>Reap</finalName>
 	</build>
+	
 </project>
 
